--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <title>Aprendizado</title>
 
     <style>
+        .res-positivo {
+
+            width: 200px;
+            background-color: rgb(4, 95, 95);
+            padding: 25px;
+            color:azure;
+            font-size: 15px;
+            margin-right: 20px;
+
+        }
+        .res-positivo:hover{
+            background-color:  rgb(3, 143, 143);
+
+        }
+
+        .res-negativo {
+            width: 200px;
+            background-color: rgb(4, 95, 95);
+            padding: 25px;
+            color:azure;
+            font-size: 15px;
+            margin-right: 20px;
+
+        }
+        .res-negativo:hover{
+            background-color:  rgb(3, 143, 143);
+
+        }
+
+
+
         .res{
 
             color: green;
