--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 }
 
                 if(elemento.classList.contains('res-negativo')){
-                    res.innerHTML = '<strong>Nunca desanime, você está criando a estrutura necessária.</strong>'
+                    res.innerHTML = '<strong>Nunca desanime, volte e veja as aulas novamente. Você está criando a estrutura necessária!</strong>'
                 }
             })
         }
